-bringing fix for  toolbar hidden behind step navigator when scrolling in "Users" tool

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -171,6 +171,11 @@
     }
   }
 }
+
+.navigated-panel .wizard-step-navigator-and-toolbar.scroll-stick {
+  top: 84px;
+}
+
 ._0-240, ._240-360, ._360-540, ._540-720, ._720-960 {
   .wizard-step-navigator-and-toolbar {
     padding-left: 0;
